UI: refine dark mode moon icon

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -261,8 +261,12 @@ body {
         padding-left: 4rem;
 
         .moon{
-          margin-left: 0.5rem;
-          fill: var(--theme-strong-color);
+          margin-left: 0.75rem;
+          fill: var(--theme-color);;
+
+          &.on{
+            fill: var(--theme-strong-color);
+          }
         }
       }
 
