--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -332,6 +332,7 @@ body {
             margin: 0;
             margin-top: -10px;
             opacity: 0;
+            pointer-events: none;
             background-color: var(--theme-background-color);
             padding-top: var(--navbar-height);
             flex-direction: column;
@@ -354,6 +355,7 @@ body {
 
         &.expanded {
           ul {
+            pointer-events: unset;
             margin-top: 0;
             opacity: 1;
           }
